Style: wrap tags on accomodation page to avoid horizontal scrolling

--- a/src/components/Tag.css
+++ b/src/components/Tag.css
@@ -1,4 +1,5 @@
 .tag {
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
