--- a/src/components/pages/Accomodation.css
+++ b/src/components/pages/Accomodation.css
@@ -26,6 +26,7 @@
 .tags-container {
     display: flex;
     gap: 10px;
+    flex-wrap: wrap;
 }
 
 .stars-container {
